# libsocialweb

./: .bzrignore  .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.am.marshal  Makefile.old  NEWS  README  TODO  acinclude.m4  autogen.sh  configure.ac  generic.c  generic.h  libsocialweb-client.pc.in  libsocialweb-keyfob.pc.in  libsocialweb-keystore.pc.in  libsocialweb-module.pc.in  libsocialweb.doap  main.c  marshals.list  mojito-client-0.0.pc.in  mojito-client.pc.in  mojito-core-ginterface.c  mojito-core-ginterface.h  mojito-core.c  mojito-core.h  mojito-core.xml  mojito-keystore.pc.in  mojito-module.pc.in  mojito-photos.c  mojito-photos.h  mojito-source-blog.c  mojito-source-flickr.c  mojito-source.c  mojito-source.h  mojito-utils.c  mojito-utils.h  mojito-view-ginterface.c  (+2 more)
docs/libsocialweb-dbus/: Makefile.am  libsocialweb-dbus-docs.sgml  spec-to-docbook.xsl
examples/: Makefile.am  monitor-caps.c  monitor-online.py  monitor.py  query.py  set-status.sh  set-test-accounts.sh  test-client-query.c  test-client.c  upload-photo.py
examples/brixton/: autogen.sh  configure.ac
interfaces/: Makefile.am  lastfm.xml  mojito-avatar.xml  mojito-marshals.list  mojito-query.xml  mojito-status-update.xml  mojito-view.xml  sw-avatar.xml  sw-banishable.xml  sw-collections.xml  sw-contact-view.xml  sw-contacts-query.xml  sw-core.xml  sw-item-view.xml  sw-marshals.list  sw-photo-upload.xml  sw-query.xml  sw-service.xml  sw-status-update.xml  sw-video-upload.xml  sw-view.xml
libsocialweb/: Makefile.am  client-monitor.c  sw-banned.c  sw-banned.h  sw-cache.c  sw-cache.h  sw-cacheable.c  sw-cacheable.h  sw-call-list.c  sw-call-list.h  sw-client-monitor.c  sw-client-monitor.h  sw-contact-view.c  sw-contact-view.h  sw-contact.c  sw-contact.h  sw-core.c  sw-core.h  sw-debug.c  sw-debug.h  sw-enum-types.c.in  sw-enum-types.h.in  sw-item-stream.c  sw-item-stream.h  sw-item-view.c  sw-item-view.h  sw-item.c  sw-item.h  sw-module.h  sw-online-testui.c  sw-online.c  sw-online.h  sw-service.c  sw-service.h  sw-set.c  sw-set.h  sw-types.h  sw-utils.c  sw-utils.h  sw-view.c  (+5 more)
libsocialweb-client/: Makefile.am  kludge.xsl  libsocialweb-client-hack-for-vala.h.footer.in  libsocialweb-client-hack-for-vala.h.header.in  sw-client-contact-view.c  sw-client-contact-view.h  sw-client-item-view.c  sw-client-item-view.h  sw-client-lastfm.c  sw-client-lastfm.h  sw-client-service-private.h  sw-client-service.c  sw-client-service.h  sw-client-view.c  sw-client-view.h  sw-client.c  sw-client.h  sw-contact.c  sw-contact.h  sw-item.c  sw-item.h
libsocialweb-keyfob/: Makefile.am  sw-keyfob-flickr.c  sw-keyfob-oauth.c  sw-keyfob-oauth2.c  sw-keyfob.h  test-runner.c
libsocialweb-keystore/: Makefile.am  README  sw-keystore.c  sw-keystore.h
libsocialweb-keystore/test-keys/: digg  flickr  myspace  twitter
mojito/: Makefile.am  client-monitor.c  client-monitor.h  mojito-banned.c  mojito-banned.h  mojito-cache.c  mojito-cache.h  mojito-call-list.c  mojito-call-list.h  mojito-core-ginterface.c  mojito-core-ginterface.h  mojito-core.c  mojito-core.h  mojito-core.xml  mojito-debug.c  mojito-debug.h  mojito-item-view.c  mojito-item-view.h  mojito-item-view.xml  mojito-item.c  mojito-item.h  mojito-marshals.list  mojito-module.h  mojito-online-testui.c  mojito-online.c  mojito-online.h  mojito-service-ginterface.c  mojito-service-ginterface.h  mojito-service-proxy.c  mojito-service-proxy.h  mojito-service.c  mojito-service.h  mojito-service.xml  mojito-set.c  mojito-set.h  mojito-source.c  mojito-source.h  mojito-sqlite.c  mojito-sqlite.h  mojito-types.h  (+11 more)
mojito-client/: Makefile.am  mojito-client-item-view.c  mojito-client-item-view.h  mojito-client-lastfm.c  mojito-client-lastfm.h  mojito-client-marshals.list  mojito-client-service-private.h  mojito-client-service.c  mojito-client-service.h  mojito-client-view.c  mojito-client-view.h  mojito-client.c  mojito-client.h  mojito-item.c  mojito-item.h
mojito-keyfob/: Makefile.am  mojito-keyfob-flickr.c  mojito-keyfob-oauth.c  mojito-keyfob.c  mojito-keyfob.h  test-runner.c
mojito-keystore/: Makefile.am  README  mojito-keystore.c  mojito-keystore.h
mojito-keystore/test-keys/: facebook  lastfm
po/: ar.po  (+36 more)
services/: Makefile.am
services/digg/: Makefile.am  digg.c  digg.h  digg.keys.in  module.c
services/dummy/: Makefile.am  dummy.c  dummy.h  module.c  mojito-module-dummy.c  mojito-service-dummy.c  mojito-service-dummy.h
services/facebook/: Makefile.am  facebook-contact-view.c  facebook-contact-view.h  facebook-item-view.c  facebook-item-view.h  facebook-util.c  facebook-util.h  facebook.c  facebook.h  facebook.keys.in  module.c
services/flickr/: Makefile.am  flickr-contact-view.c  flickr-contact-view.h  flickr-item-view.c  flickr-item-view.h  flickr.c  flickr.h  flickr.keys  flickr.keys.in  module.c  mojito-service-flickr.c  mojito-service-flickr.h
services/lastfm/: Makefile.am  lastfm-contact-view.c  lastfm-contact-view.h  lastfm-item-view.c  lastfm-item-view.h  lastfm.c  lastfm.h  lastfm.keys  lastfm.keys.in  lastfm.xml  module.c  mojito-marshals.list
services/myspace/: Makefile.am  module.c  myspace-item-view.c  myspace-item-view.h  myspace.c  myspace.h  myspace.keys  myspace.keys.in
services/photobucket/: Makefile.am  module.c  photobucket.c  photobucket.h  photobucket.keys.in
services/plurk/: Makefile.am  module.c  plurk-item-view.c  plurk-item-view.h  plurk.c  plurk.h  plurk.keys.in
services/sina/: Makefile.am  module.c  sina-item-view.c  sina-item-view.h  sina.c  sina.h  sina.keys.in
services/skeleton/: Makefile.am  module.c  skeleton.c  skeleton.h
services/smugmug/: Makefile.am  module.c  smugmug.c  smugmug.h  smugmug.keys.in
services/twitter/: Makefile.am  module.c  twitter-contact-view.c  twitter-contact-view.h  twitter-item-stream.c  twitter-item-stream.h  twitter-item-view.c  twitter-item-view.h  twitter.c  twitter.h  (+2 more)
src/: Makefile.am  libsocialweb.service.in  main.c  mojito.service.in  poll.c  poll.h
tests/: Makefile.am  test-client-online.c  test-download-async.c  test-download.c  test-online.c  test-upload.c
vala/: Makefile.am
(+56 files in other folders)
